--- a/website/css/style.css
+++ b/website/css/style.css
@@ -35,6 +35,7 @@ body{
     position: relative;
     max-width: 1990px;
     margin: auto;
+
 }
 .app-structure .layout{
     display: flex;
@@ -77,6 +78,7 @@ body{
     height: 58px;
     width: 429px;
     margin-top: 10px;
+    text-transform: capitalize;
 }
 .app-structure .layout .app-left-side form .input-group input[type="text"].checked{
     border: 2px solid rgb(42, 30, 73);
@@ -152,8 +154,10 @@ body{
 /* app right side style */
 .app-structure .layout .app-right-side{
     width: 50%;
+    overflow: hidden;
+    margin-left: 10px;
 }
-.app-structure .layout .app-right-side p {
+.myclock {
     font-style: normal;
     font-weight: normal;
     font-size: 136px;
@@ -164,6 +168,70 @@ body{
     width: 100%;
     padding-top: 47px;
 }
+.app-structure .layout .app-right-side .report{
+    background: rgba(255, 255, 255, 0.46);
+    border-radius: 4px;
+    width: 100%;
+    padding: 13px;
+    position: relative;
+    animation-name: appearleft;
+    animation-duration: 1s;
+    display: flex;
+    margin-top: 70px;
+}
+@keyframes appearleft {
+    0%{
+        transform: translate(100%);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(0);
+        opacity: 1;
+    }
+}
+.app-structure .layout .app-right-side .report #date{
+    position: absolute;
+    top: 13px;
+    right: 13px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 29px;
+    color: #2A1E49;
+}
+.app-structure .layout .app-right-side .report .left-side{
+    width: 70%;
+}
+.app-structure .layout .app-right-side .report .left-side h3{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 39px;
+    line-height: 45px;
+    color: #2A1E49;
+}
+.app-structure .layout .app-right-side .report .left-side ul{
+    list-style: none;
+}
+.app-structure .layout .app-right-side .report .left-side .report-item li{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 29px;
+    color: #2A1E49;
+    padding-top: 9px;
+    margin-left: 18px;
+}
+.app-structure .layout .app-right-side .report .right-side{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+.app-structure .layout .app-right-side .report .right-side img{
+    transform: scale(3);
+    margin-left: 74px;
+    margin-top: 28px;
+}
 
 /** end **/
 
@@ -171,17 +239,18 @@ body{
 /** start **/
 @media screen and (max-width: 990px) {
     .app-structure .layout{
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .app-structure .layout .app-left-side, .app-structure .layout .app-right-side{
         min-width: 100%;
+        margin-left: 0;
     }
     .app-structure .layout .app-left-side form .btn-con button,
     .app-structure .layout .app-left-side form textarea{
         min-width: 100%;
         max-width: 100%;
     }
-    .app-structure .layout .app-right-side p{
+    .myclock{
         font-size: 90px;
         line-height: 0;
         padding-top: 80px;
@@ -193,6 +262,21 @@ body{
     .app-structure .layout .app-left-side form .btn-con button{
         margin-bottom: 70px;
     }
+    .app-structure .layout .app-right-side .report{
+        flex-direction: column-reverse;
+        margin-top: 50px;
+    }
+    .app-structure .layout .app-right-side .report .left-side, .app-structure .layout .app-right-side .report .right-side{
+        min-width: 100%;
+    }
+    .app-structure .layout .app-right-side .report .right-side img {
+        margin-left: 0;
+        margin-top: 53px;
+    }
+    .app-structure .layout .app-right-side{
+        margin-top: -90px;
+        padding-bottom: 61px;
+    }
 
 }
 @media screen and (max-width: 400px){
@@ -200,8 +284,83 @@ body{
         min-width: 85%;
         max-width: 85%;
     }
-    .app-structure .layout .app-right-side p{
+    .myclock{
         font-size: 70px;
+    }
+    .app-structure .layout .app-left-side h2{
+        font-size: 37px;
+    }
+    .app-structure .layout .app-right-side .report .left-side h3{
+        font-size: 30px;
+    }
+}
+/** end **/
+
+/** errors style **/
+/** start **/
+.errors{
+    background: rgba(255, 255, 255, 0.46);
+    border-radius: 4px;
+    width: 100%;
+    padding: 13px;
+    position: relative;
+    animation-name: appearleft;
+    animation-duration: 1s;
+    margin-top: 70px;
+    text-align: center;
+    min-width: 200px;
+}
+.errors h4{
+    color: rgb(221, 69, 69);
+    text-align: center;
+    font-size: 20px;
+    padding: 7px;
+}
+/** end **/
+
+/** loader style **/
+/** start **/
+.load{
+    width: 100%;
+    padding: 13px;
+    margin-top: 70px;
+    text-align: center;
+    min-width: 200px;
+}
+.load h4 {
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+    animation-name: loading;
+    animation-duration: 0.9s;
+    animation-iteration-count: infinite;
+}
+@keyframes loading {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.4);
+    }
+}
+/** end **/
+
+/** media appear **/
+/** start **/ 
+@media screen and (min-width: 990px){
+    .desktop{
+        display: block;
+    }
+    .mobile{
+        display: none;
+    }
+}
+@media screen and (max-width: 990px){
+    .desktop{
+        display: none;
+    }
+    .mobile{
+        display: block;
     }
 }
 /** end **/
